# my_first_project

./: .coveragerc  .env.template  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: lint.py  run_tests.py
src/: decorators.py  external_api.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_filter_by_state.py  test_generators.py  test_get_date.py  test_get_mask_account_card.py  test_logging.py  test_masks.py  test_sort_by_date.py  test_utils.py  tests.py
