[tool.poetry]
name = "PythonProject"
version = "0.1.0"
description = "Утилиты для маскирования номеров банковских карт и счетов"
authors = ["Your Name <you@example.com>"]
license = "MIT"

# ✅ Указываем, где находится пакет
packages = [
    { include = "src" }
]

# ✅ Скрипт для линтинга
[tool.poetry.scripts]
lint = "scripts.lint:main"
test = "scripts.run_tests:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = false
known_third_party = ["requests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv",
    "__pycache__",
    ".git",
    "tests"
]

